@@ -185,7 +185,7 @@ sub createDac18Medm
         print "creating file $medmDir\/$fname \n";
         open(OUTMEDM, ">$medmDir/$fname") || die "cannot open $medmDir/$fname for writing ";
 
-        my $xpos = 0; my $ypos = 0; my $width = 171; my $height = 275;
+        my $xpos = 0; my $ypos = 0; my $width = 235; my $height = 275;
         $medmdata = ("CDS::medmGen::medmGenFile") -> ($medmDir,$fname,$width,$height);
 
 	# ************* Create Banner ******************************************************************************
@@ -193,27 +193,31 @@ sub createDac18Medm
         $height = 22;
         $medmdata .= ("CDS::medmGen::medmGenRectangle") -> ($xpos,$ypos,$width,$height,$ecolors{blue},"","","");
         # Add Display Name
-        $xpos = 25; $ypos = 4; $width = 120; $height = 15;        
+        $xpos = 55; $ypos = 4; $width = 120; $height = 15;        
 	$medmdata .= ("CDS::medmGen::medmGenText") -> ($xpos,$ypos,$width,$height,"$mdlName\_DAC_MONITOR_$::dacCardNum[$dacNum]",$ecolors{white});
 
         # ************* Create Background **************************************************************************
         # Add Background rectangles
-        $xpos = 13; $ypos = 37; $width = 140; $height = 225;
+        $xpos = 13; $ypos = 27; $width = 210; $height = 238;
         $medmdata .= ("CDS::medmGen::medmGenRectangle") -> ($xpos,$ypos,$width,$height,$ecolors{gray},"","","");
 
         # ************* Add Text  **********************************************************************************
         # Add DAC top label
-        $xpos = 13; $ypos = 43; $width = 140; $height = 15;
+        $xpos = 46; $ypos = 32; $width = 140; $height = 15;
         $medmdata .= ("CDS::medmGen::medmGenText") -> ($xpos,$ypos,$width,$height,"DAC $::dacCardNum[$dacNum] - 18bit",$ecolors{black});
         # Add DAC OUT label
-        $xpos = 49; $ypos = 64; $width = 45; $height = 15;
+        $xpos = 49; $ypos = 52; $width = 45; $height = 15;
         $medmdata .= ("CDS::medmGen::medmGenText") -> ($xpos,$ypos,$width,$height,"OUT",$ecolors{black});
         # Add OFC OUT label
-        $xpos = 99; $ypos = 64; $width = 45; $height = 15;
-        $medmdata .= ("CDS::medmGen::medmGenText") -> ($xpos,$ypos,$width,$height,"OFC",$ecolors{black});
+        $xpos = 134; $ypos = 52; $width = 45; $height = 15;
+        $medmdata .= ("CDS::medmGen::medmGenText") -> ($xpos,$ypos,$width,$height,"OVERFLOW",$ecolors{black});
+        $xpos = 108; $ypos = 70; $width = 45; $height = 15;
+        $medmdata .= ("CDS::medmGen::medmGenText") -> ($xpos,$ypos,$width,$height,"PER SEC",$ecolors{black});
+        $xpos = 160; $ypos = 70; $width = 45; $height = 15;
+        $medmdata .= ("CDS::medmGen::medmGenText") -> ($xpos,$ypos,$width,$height,"ACCUM",$ecolors{black});
 
         # Add DAC Channel labels
-        $xpos = 14; $ypos = 93; $width = 35; $height = 15;
+        $xpos = 14; $ypos = 103; $width = 35; $height = 15;
 	for($ii=0;$ii<8;$ii+=2)
 	{
 		$medmdata .= ("CDS::medmGen::medmGenText") -> ($xpos,$ypos,$width,$height,"CH $ii",$ecolors{black});
@@ -222,23 +226,29 @@ sub createDac18Medm
 
         # ************* Add Data Monitors  ***************************************************************************
         # Add Output Status Monitor
-        $xpos = 62; $ypos = 77; $width = 20; $height = 12;
+        $xpos = 49; $ypos = 88; $width = 45; $height = 12;
         $medmdata .= ("CDS::medmGen::medmGenByte") -> ($xpos,$ypos,$width,$height,"$site\:FEC-$dcuid\_DAC_STAT_$dacNum","1","1",$ecolors{green},$ecolors{red});
         # Add Overflow Status Monitor
-        $xpos = 112; $ypos = 77; $width = 20; $height = 12;
+        $xpos = 109; $ypos = 88; $width = 45; $height = 12;
         $medmdata .= ("CDS::medmGen::medmGenByte") -> ($xpos,$ypos,$width,$height,"$site\:FEC-$dcuid\_DAC_STAT_$dacNum","2","2",$ecolors{green},$ecolors{red});
 
         # Add DAC Data Monitors
-        $xpos = 49; $ypos = 92; $width = 45; $height = 15;
+        $xpos = 49; $ypos = 102; $width = 45; $height = 15;
 	for($ii=0;$ii<8;$ii++)
 	{
         	$medmdata .= ("CDS::medmGen::medmGenTextMon") -> ($xpos,$ypos,$width,$height,"$site\:FEC-$dcuid\_DAC_OUTPUT_$dacNum\_$ii",$ecolors{white},$ecolors{blue},"static");
 		$ypos += 20;
 	}
-        $xpos = 99; $ypos = 92; $width = 45; $height = 15;
+        $xpos = 109; $ypos = 102; $width = 45; $height = 15;
 	for($ii=0;$ii<8;$ii++)
 	{
         	$medmdata .= ("CDS::medmGen::medmGenTextMon") -> ($xpos,$ypos,$width,$height,"$site\:FEC-$dcuid\_DAC_OVERFLOW_$dacNum\_$ii",$ecolors{white},$ecolors{blue},"static");
+		$ypos += 20;
+	}
+        $xpos = 159; $ypos = 102; $width = 55; $height = 15;
+	for($ii=0;$ii<8;$ii++)
+	{
+        	$medmdata .= ("CDS::medmGen::medmGenTextMon") -> ($xpos,$ypos,$width,$height,"$site\:FEC-$dcuid\_DAC_OVERFLOW_ACC_$dacNum\_$ii",$ecolors{white},$ecolors{blue},"static");
 		$ypos += 20;
 	}
 
